add presentation source code link

--- a/presentation.bib
+++ b/presentation.bib
@@ -35,3 +35,10 @@
   url       = {},
   howpublished = "\url{https://github.com/thm-mni-ii/sea}"}
 }
+
+@misc{presentation-source,
+  author    = {Tomáš Sláma},
+  title     = {Zdrojový kód k prezentaci},
+  url       = {},
+  howpublished = "\url{https://github.com/xiaoxiae/inline-bfs-dfs-presentation}"}
+}
