--- a/presentation.tex
+++ b/presentation.tex
@@ -276,7 +276,7 @@
 	\end{frame}
 	
 	\appendix
-	\begin{frame}{Zdroje}
+	\begin{frame}{Zdroje a dodatečné materiály}
 		\nocite{*}
 		\bibliography{presentation}
 		\bibliographystyle{plain}
