--- a/presentation.tex
+++ b/presentation.tex
@@ -59,7 +59,7 @@
 
 \title{In-place BFS a DFS}
 \subtitle{v lineárním čase na modelu RAM}
-\date{Tomáš Sláma \hfill 21. 11. 1999} % please don't judge me
+\date{Tomáš Sláma \hfill 7. 4. 2020}
 
 \begin{document}
 	\begin{frame}
