update implementation name to match readme

--- a/presentation.tex
+++ b/presentation.tex
@@ -259,7 +259,7 @@
 
 	\begin{frame}{\st{Pseudokód} Python}
 		\begin{center}
-			\href{run:presentation.py}{\faPython\ presentation.py} 
+			\href{run:dfs.py}{\faPython\ dfs.py}
 		\end{center}
 	\end{frame}
 
@@ -328,7 +328,7 @@
 				\end{itemize}
 				\item[1)] postupně hledáme vrcholy $v'$ stupně $1$
 				\begin{itemize}
-					\item pokud ještě nebyly opraveny, obracíme prohozené pointery
+					\item pokud ještě nebyly opraveny, obracíme psource and resultrohozené pointery
 				\end{itemize}
 			\end{enumerate}
 		\end{minipage}
